Statics field descriptors building and optimizations